--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -2,7 +2,7 @@ version: v1.0
 name: Initial Pipeline
 agent:
   machine:
-    type: e1-standard-8
+    type: e1-standard-4
     os_image: ubuntu1804
     
     
@@ -10,7 +10,7 @@ blocks:
   - name: 'Block #1'
     task:
       jobs:
-        - name: 'Selenium Testing'
+        - name: 'Java Testing'
           parallelism: 3
           commands:
             - sudo apt update
